# ofxUrgDevice

./: README.md
Region_Detect_App/: addons.make
Region_Detect_App/example_roi_setting_UI.xcodeproj/: project.pbxproj
Region_Detect_App/example_roi_setting_UI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Region_Detect_App/example_roi_setting_UI.xcodeproj/project.xcworkspace/xcuserdata/Koma.xcuserdatad/: UserInterfaceState.xcuserstate
Region_Detect_App/example_roi_setting_UI.xcodeproj/xcshareddata/xcschemes/: example_roi_setting_UI Debug.xcscheme  example_roi_setting_UI Release.xcscheme
Region_Detect_App/src/: BoundingBox.cpp  BoundingBox.h  testApp.cpp  testApp.h
example_ofxUrgDevice/: addons.make
example_ofxUrgDevice/example_ofxUrgDevice.xcodeproj/: project.pbxproj
example_ofxUrgDevice/example_ofxUrgDevice.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
example_ofxUrgDevice/example_ofxUrgDevice.xcodeproj/project.xcworkspace/xcuserdata/Koma.xcuserdatad/: UserInterfaceState.xcuserstate
example_ofxUrgDevice/example_ofxUrgDevice.xcodeproj/xcshareddata/xcschemes/: example_ofxUrgDevice Debug.xcscheme  example_ofxUrgDevice Release.xcscheme
example_ofxUrgDevice/src/: testApp.cpp  testApp.h
libs/SDL_NET/1.2.8/lib/: libSDL_net-1.2.0.dylib  libSDL_net.dylib
libs/SDL_NET/1.2.8/lib/pkgconfig/: SDL_net.pc
libs/URG/include/: Makefile.am  Makefile.in
libs/URG/include/cpp/: ConnectionUtils.h  Coordinate.h  DetectOS.h  DeviceServer.h  IsUsbCom.h  Lock.h  LockGuard.h  LogNameHolder.h  Makefile.am  Makefile.in  MathUtils.h  MonitorEventScheduler.h  RangeCaptureMode.h  RingBuffer.h  Semaphore.h  TcpipSocket.h  UrgCtrl.h  UrgDevice.h  UrgServer.h  UrgUsbCom.h  UrgUtils.h  findUrgPorts.h  log_printf.h  mUrgDevice.h
libs/URG/src/: Makefile.am  Makefile.in
libs/URG/src/cpp/: Makefile.am  Makefile.in
libs/URG/src/cpp/common/: Makefile.am  Makefile.in  split.cpp  split.h
libs/URG/src/cpp/connection/: Connection.h  ConnectionUtils.cpp  FindComPorts.cpp  FindComPorts.h  Makefile.am  Makefile.in  SerialDevice.cpp  SerialDevice.h  SerialDevice_lin.cpp  SerialDevice_win.cpp  isUsingComDriver.cpp  isUsingComDriver.h
libs/URG/src/cpp/connection/sdl/: Makefile.am  Makefile.in  SdlNetInit.cpp  SdlNetInit.h  SocketSet.cpp  SocketSet.h  TcpipServer.cpp  TcpipServer.h  TcpipSocket.cpp
libs/URG/src/cpp/coordinate/: Coordinate.cpp  Makefile.am  Makefile.in
libs/URG/src/cpp/geometry/: Angle.cpp  Angle.h  Makefile.am  Makefile.in  Point.h  Position.h
libs/URG/src/cpp/monitor/: DeviceIpManager.cpp  DeviceIpManager.h  LogNameHolder.cpp  Makefile.am  Makefile.in  MonitorDataHandler.cpp  MonitorDataHandler.h  MonitorEventScheduler.cpp  MonitorModeManager.cpp  UrgServer.cpp  mConnection.cpp  mConnection.h  mUrgDevice.cpp
libs/URG/src/cpp/system/: ConditionVariable.h  Lock.cpp  LockGuard.cpp  Makefile.am  Makefile.in  MathUtils.cpp  MonitorModeManager.cpp  MonitorModeManager.h  SdlInit.cpp  SdlInit.h  Semaphore.cpp  Thread.cpp  Thread.h  delay.cpp  delay.h  log_printf.cpp  system_delay.cpp  system_delay.h  system_ticks.cpp  system_ticks.h  ticks.cpp  ticks.h
libs/URG/src/cpp/urg/: CaptureSettings.h  Makefile.am  Makefile.in  RangeSensor.h  RangeSensorParameter.h  ScipHandler.cpp  ScipHandler.h  UrgCtrl.cpp  UrgDevice.cpp  UrgUsbCom.cpp  findUrgPorts.cpp
src/: UrgData.cpp  UrgData.h  ofxUrgDevice.cpp  ofxUrgDevice.h
