## Makefile.am -- Process this file with automake to produce Makefile.in

liburg_includedir = ${includedir}/urg
liburg_include_HEADERS = RangeSensor.h CaptureSettings.h RangeSensorParameter.h UrgDevice.h UrgCtrl.h RangeCaptureMode.h UrgUsbCom.h UrgUtils.h RingBuffer.h split.h Connection.h SerialDevice.h ConnectionUtils.h FindComPorts.h isUsingComDriver.h IsUsbCom.h TcpipSocket.h Position.h Angle.h Point.h DetectOS.h Thread.h Lock.h LockGuard.h Semaphore.h ticks.h delay.h ConditionVariable.h MathUtils.h log_printf.h Coordinate.h MonitorDataHandler.h MonitorModeManager.h MonitorEventScheduler.h DeviceIpManager.h LogNameHolder.h mConnection.h mUrgDevice.h UrgServer.h DeviceServer.h findUrgPorts.h
