## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES = ${CPP_INCLUDES}
lib_LTLIBRARIES = liburg_coordinate.la
liburg_coordinate_includedir = ${includedir}/urg
liburg_coordinate_include_HEADERS = Coordinate.h
liburg_coordinate_la_SOURCES = Coordinate.cpp

AM_CXXFLAGS = ${SDL_CFLAGS}
