## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES = ${CPP_INCLUDES}
lib_LTLIBRARIES = liburg_geometry.la
liburg_geometry_includedir = ${includedir}/urg
liburg_geometry_include_HEADERS = Position.h Angle.h Point.h
liburg_geometry_la_SOURCES = Angle.cpp

AM_CXXFLAGS = ${SDL_CFLAGS}
