## Makefile.am -- Process this file with automake to produce Makefile.in

INCLUDES = ${CPP_INCLUDES}
lib_LTLIBRARIES = liburg_connection_sdl.la
liburg_connection_sdl_includedir = $(includedir)/urg
liburg_connection_sdl_include_HEADERS = TcpipServer.h
liburg_connection_sdl_la_SOURCES = TcpipSocket.cpp TcpipServer.cpp SocketSet.cpp SdlNetInit.cpp \
SocketSet.h SdlNetInit.h
